--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, staging ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
